首页轮播，登录,注册静态

--- a/wohao-vue/package.json
+++ b/wohao-vue/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.2.1",
     "json": "^9.0.6",
     "mint-ui": "^2.2.13",
+    "postcss-url": "^7.3.0",
     "stringify": "^5.2.0",
     "swiper": "^4.0.7",
     "vue": "^2.5.2",
